chore (html): norsk

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 <body>
   <header>
-    <h1>stark.lol uploader</h1>
+    <h1>stark.lol</h1>
     <p>Dra inn eller lim inn bilde for å laste opp til vgy.me</p>
   </header>
 
@@ -114,7 +114,7 @@
     <p id="status"></p>
     <textarea id="output" readonly style="width:300px; height:40px;"></textarea>
 
-    <h2>📸 Tidligere opplastede bilder</h2>
+    <h2>📸 Historikk</h2>
     <div class="image-list" id="imageList"></div>
   </main>
 
