chore (html): History button

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     </div>
     <div>
       <button onclick="clearHistory()">Tøm historikk</button>
+      <button onclick="window.open('https://vgy.me/account/uploads', '_blank')">Mine opplastninger</button>
       <button id="viewToggle" onclick="toggleView()">Grid</button>
     </div>
   </div>
